plugins/opensearch-iouring/dist/native/include/opensearch_iouring.h

/* ============================================================================
 * Ring Management
 * ============================================================================ */

/**
 * Opaque ring handle.
 */
typedef struct osur_ring osur_ring_t;
/**
 * Submit a read using both registered file and buffer.
 * This is the most optimized path.
 *
 * @param ring       The ring
 * @param fd_index   Index of the registered file descriptor
 * @param buf_index  Index of the registered buffer
 * @param len        Number of bytes to read
 * @param offset     File offset to read from
 * @param user_data  User data returned with completion
 * @return 0 on success, negative error code on failure
 */
int osur_submit_read_fixed(osur_ring_t* ring,
                           uint32_t fd_index,
                           uint32_t buf_index,
                           uint32_t len,
                           uint64_t offset,
                           uint64_t user_data);
/**
 * Submit an fsync operation.
 *
 * @param ring       The ring
 * @param fd         File descriptor to sync
 * @param user_data  User data returned with completion
 * @return 0 on success, negative error code on failure
 */
int osur_submit_fsync(osur_ring_t* ring, int fd, uint64_t user_data);
/**
 * Submit all pending operations to the kernel.
 *
 * @param ring The ring
 * @return Number of SQEs submitted, or negative error code
 */
int osur_submit(osur_ring_t* ring);
/**
 * Submit and wait for at least min_complete completions.
 *
 * @param ring         The ring
 * @param min_complete Minimum completions to wait for
 * @return Number of SQEs submitted, or negative error code
 */
int osur_submit_and_wait(osur_ring_t* ring, uint32_t min_complete);
/* ============================================================================
 * Completion Handling
 * ============================================================================ */

/**
 * Completion result structure.
 */
typedef struct {
    uint64_t user_data;  /* User data from the submission */
    int32_t  result;     /* Result: bytes transferred (>=0) or error (<0) */
    uint32_t flags;      /* Completion flags (reserved) */
} osur_completion_t;
/**
 * Poll for a completion (non-blocking).
 *
 * @param ring       The ring
 * @param completion Output: completion result (if available)
 * @return 1 if completion available, 0 if none available, negative on error
 */
int osur_poll_completion(osur_ring_t* ring, osur_completion_t* completion);
/**
 * Wait for a completion (blocking).
 *
 * @param ring       The ring
 * @param completion Output: completion result
 * @return 0 on success, negative error code on failure
 */
int osur_wait_completion(osur_ring_t* ring, osur_completion_t* completion);
/**
 * Wait for a completion with timeout.
 *
 * @param ring        The ring
 * @param completion  Output: completion result
 * @param timeout_ms  Timeout in milliseconds (0 = non-blocking, -1 = infinite)
 * @return 0 on success, -ETIMEDOUT on timeout, other negative on error
 */
int osur_wait_completion_timeout(osur_ring_t* ring,
                                  osur_completion_t* completion,
                                  int32_t timeout_ms);