plugins/opensearch-iouring/src/main/generated/org/opensearch/index/store/iouring/ffi/opensearch_iouring_h.java


    /**
     * {@snippet lang=c :
     * int osur_submit_read_fixed(osur_ring_t *ring, uint32_t fd_index, uint32_t buf_index, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static int osur_submit_read_fixed(MemorySegment ring, int fd_index, int buf_index, int len, long offset, long user_data) {
        var mh$ = osur_submit_read_fixed.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_submit_read_fixed", ring, fd_index, buf_index, len, offset, user_data);
            }
            return (int)mh$.invokeExact(ring, fd_index, buf_index, len, offset, user_data);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_submit_fsync {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_submit_fsync");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_submit_fsync(osur_ring_t *ring, int fd, uint64_t user_data)
     * }
     */
    public static FunctionDescriptor osur_submit_fsync$descriptor() {
        return osur_submit_fsync.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_submit_fsync(osur_ring_t *ring, int fd, uint64_t user_data)
     * }
     */
    public static MethodHandle osur_submit_fsync$handle() {
        return osur_submit_fsync.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_submit_fsync(osur_ring_t *ring, int fd, uint64_t user_data)
     * }
     */
    public static MemorySegment osur_submit_fsync$address() {
        return osur_submit_fsync.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_submit_fsync(osur_ring_t *ring, int fd, uint64_t user_data)
     * }
     */
    public static int osur_submit_fsync(MemorySegment ring, int fd, long user_data) {
        var mh$ = osur_submit_fsync.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_submit_fsync", ring, fd, user_data);
            }
            return (int)mh$.invokeExact(ring, fd, user_data);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_submit {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_submit");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_submit(osur_ring_t *ring)
     * }
     */
    public static FunctionDescriptor osur_submit$descriptor() {
        return osur_submit.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_submit(osur_ring_t *ring)
     * }
     */
    public static MethodHandle osur_submit$handle() {
        return osur_submit.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_submit(osur_ring_t *ring)
     * }
     */
    public static MemorySegment osur_submit$address() {
        return osur_submit.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_submit(osur_ring_t *ring)
     * }
     */
    public static int osur_submit(MemorySegment ring) {
        var mh$ = osur_submit.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_submit", ring);
            }
            return (int)mh$.invokeExact(ring);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_submit_and_wait {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_submit_and_wait");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_submit_and_wait(osur_ring_t *ring, uint32_t min_complete)
     * }
     */
    public static FunctionDescriptor osur_submit_and_wait$descriptor() {
        return osur_submit_and_wait.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_submit_and_wait(osur_ring_t *ring, uint32_t min_complete)
     * }
     */
    public static MethodHandle osur_submit_and_wait$handle() {
        return osur_submit_and_wait.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_submit_and_wait(osur_ring_t *ring, uint32_t min_complete)
     * }
     */
    public static MemorySegment osur_submit_and_wait$address() {
        return osur_submit_and_wait.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_submit_and_wait(osur_ring_t *ring, uint32_t min_complete)
     * }
     */
    public static int osur_submit_and_wait(MemorySegment ring, int min_complete) {
        var mh$ = osur_submit_and_wait.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_submit_and_wait", ring, min_complete);
            }
            return (int)mh$.invokeExact(ring, min_complete);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_poll_completion {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_poll_completion");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_poll_completion(osur_ring_t *ring, osur_completion_t *completion)
     * }
     */
    public static FunctionDescriptor osur_poll_completion$descriptor() {
        return osur_poll_completion.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_poll_completion(osur_ring_t *ring, osur_completion_t *completion)
     * }
     */
    public static MethodHandle osur_poll_completion$handle() {
        return osur_poll_completion.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_poll_completion(osur_ring_t *ring, osur_completion_t *completion)
     * }
     */
    public static MemorySegment osur_poll_completion$address() {
        return osur_poll_completion.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_poll_completion(osur_ring_t *ring, osur_completion_t *completion)
     * }
     */
    public static int osur_poll_completion(MemorySegment ring, MemorySegment completion) {
        var mh$ = osur_poll_completion.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_poll_completion", ring, completion);
            }
            return (int)mh$.invokeExact(ring, completion);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_wait_completion {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_wait_completion");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_wait_completion(osur_ring_t *ring, osur_completion_t *completion)
     * }
     */
    public static FunctionDescriptor osur_wait_completion$descriptor() {
        return osur_wait_completion.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_wait_completion(osur_ring_t *ring, osur_completion_t *completion)
     * }
     */
    public static MethodHandle osur_wait_completion$handle() {
        return osur_wait_completion.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_wait_completion(osur_ring_t *ring, osur_completion_t *completion)
     * }
     */
    public static MemorySegment osur_wait_completion$address() {
        return osur_wait_completion.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_wait_completion(osur_ring_t *ring, osur_completion_t *completion)
     * }
     */
    public static int osur_wait_completion(MemorySegment ring, MemorySegment completion) {
        var mh$ = osur_wait_completion.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_wait_completion", ring, completion);
            }
            return (int)mh$.invokeExact(ring, completion);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_wait_completion_timeout {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_wait_completion_timeout");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_wait_completion_timeout(osur_ring_t *ring, osur_completion_t *completion, int32_t timeout_ms)
     * }
     */
    public static FunctionDescriptor osur_wait_completion_timeout$descriptor() {
        return osur_wait_completion_timeout.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_wait_completion_timeout(osur_ring_t *ring, osur_completion_t *completion, int32_t timeout_ms)
     * }
     */
    public static MethodHandle osur_wait_completion_timeout$handle() {
        return osur_wait_completion_timeout.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_wait_completion_timeout(osur_ring_t *ring, osur_completion_t *completion, int32_t timeout_ms)
     * }
     */
    public static MemorySegment osur_wait_completion_timeout$address() {
        return osur_wait_completion_timeout.ADDR;
    }
